--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,8 +1,19 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=SwipSwapDB;Trusted_Connection=True;"
+    },
+
+    "Stripe": {
+        "PublishableKey": "",
+        "SecretKey": "",
+        "WebhookSecret": ""
     }
-  }
+
 }
