--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "build": "postcss wwwroot/css/input.css -o wwwroot/css/site.css",
-        "watch": "postcss wwwroot/css/input.css -o wwwroot/css/site.css --watch",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "build": "postcss ./Styles/tailwind.css -o ./wwwroot/css/site.css",
+        "watch:css": "postcss ./Styles/tailwind.css -o ./wwwroot/css/site.css --watch"
     },
     "keywords": [],
     "author": "",
@@ -13,6 +12,7 @@
     "description": "",
     "devDependencies": {
         "autoprefixer": "^10.4.22",
+        "eslint": "^9.39.1",
         "postcss": "^8.5.6",
         "postcss-cli": "^11.0.1",
         "tailwindcss": "^3.4.18"
